# tinyBackend

./: .gitignore  CMakeLists.txt  CMake_config.h.in  README.md  main.cpp
AOP/: AOP.hpp  CMakeLists.txt
Base/: BaseConfig.cmake.in  BlockQueue.hpp  CMakeLists.txt  Condition.hpp  Exception.cpp  Exception.hpp  File.cpp  File.hpp  GlobalObject.hpp  LRUCache.hpp  LinkedThreadPool.hpp  LogRank.hpp  Mutex.hpp  RingBuffer.cpp  RingBuffer.hpp  ScheduledThread.hpp  SystemLog.hpp  Thread.cpp  Thread.hpp  ThreadPool.cpp  ThreadPool.hpp  VersionNumber.hpp
Base/BPTree_impls/: BPTree.hpp  BPTreeErrors.hpp  BPTree_impl.hpp  BlockIter.hpp  DataBlock_Impl.hpp  Impl_Scheduler.hpp  IndexBlock_Impl.hpp  Interpreter.hpp  ResultSet_Impl.hpp
Base/BPTree_impls/src/: Impl_Scheduler.cpp
Base/Buffer/: BufferPool.cpp  BufferPool.hpp  InputBuffer.hpp  OutputBuffer.hpp  RingBuffer.hpp  RingBufferWrapper.hpp
Base/Buffer/src/: BufferPool.cpp  RingBuffer.cpp  RingBufferWrapper.cpp
Base/Container/: BpTree.hpp  List.hpp  SingleList.hpp
Base/Detail/: AsyncFun.hpp  BlockFile.hpp  BufferArray.hpp  CurrentThread.cpp  CurrentThread.hpp  DioFile.hpp  FileDir.hpp  NoCopy.hpp  PlainAny.hpp  Pool.hpp  config.hpp  iFile.hpp  ioFile.hpp  oFile.hpp
Base/Detail/src/: BlockFile.cpp  CurrentThread.cpp
Base/Log/: Log.cpp  Log.hpp  LogRank.hpp  Log_buffer.hpp  Log_config.hpp  SendBuffer.cpp  SendBuffer.hpp  SendThread.cpp  SendThread.hpp  Sender.hpp  SystemLog.hpp
Base/Log/src/: Log.cpp  SendBuffer.cpp  SendThread.cpp  SystemLog.cpp
Base/Loop/: EventLoop.cpp  EventLoop.hpp  TimerLoop.hpp
Base/Loop/src/: EventLoop.cpp  TimerLoop.cpp
Base/Time/: Date.cpp  Date.hpp  Time.hpp  TimeDifference.hpp  TimeInterval.hpp  TimeStamp.cpp  TimeStamp.hpp  Time_difference.cpp  Time_difference.hpp  Timer.cpp  Timer.hpp  TimerLoop.hpp
Base/Time/src/: Date.cpp  Time.cpp  TimeDifference.cpp  TimeInterval.cpp  TimeStamp.cpp  Time_difference.cpp  Timer.cpp  TimerLoop.cpp
Base/src/: Exception.cpp  LinkedThreadPool.cpp  ScheduledThread.cpp  SystemLog.cpp  Thread.cpp  ThreadPool.cpp
Distributed/: CMakeLists.txt
Distributed/raft/: RaftAgent.hpp  RaftInstance.hpp  RaftMessage.hpp  RaftStateMachine.hpp  RaftTransmitter.hpp
Distributed/raft/src/: RaftAgent.cpp  RaftInstance.cpp  RaftTransmitter.cpp
LogSystem/: CMakeLists.txt  GlobalObject.hpp  LogError.hpp  LogRank.hpp  LogSystemConfig.cmake.in  LogWriter.hpp  NetLogWriter.hpp  ResultSet.hpp  SystemLog.hpp
LogSystem/Engines/: EnginesEnum.hpp  LogAgent.hpp
LogSystem/Send/: SendBuffer.hpp  SendThread.hpp  Sender.hpp
LogSystem/Send/src/: SendBuffer.cpp  SendThread.cpp
LogSystem/StoreEngine/: BlockFile.hpp  IndexFile.hpp
LogSystem/StoreEngine/src/: BlockFile.cpp
LogSystem/linkLog/: Identification.hpp  LinkLogCenter.hpp  LinkLogErrors.hpp  LinkLogHandler.hpp  LinkLogInterpreter.hpp  LinkLogMessage.hpp  LinkLogOperation.hpp  LinkLogServer.hpp  LinkLogger.hpp
LogSystem/linkLog/src/: LinkLogCenter.cpp  LinkLogInterpreter.cpp  LinkLogServer.cpp  LinkLogger.cpp
LogSystem/src/: LogWriter.cpp  NetLogWriter.cpp  SystemLog.cpp
Net/: Acceptor.cpp  Acceptor.hpp  BalancedReactor.hpp  CMakeLists.txt  Channel.cpp  Channel.hpp  ChannelsManger.cpp  ChannelsManger.hpp  Controller.cpp  Controller.hpp  EventLoop.cpp  EventLoop.hpp  FileDescriptor.cpp  FileDescriptor.hpp  InetAddress.cpp  InetAddress.hpp  MessageAgent.hpp  NetConfig.cmake.in  NetLink.cpp  NetLink.hpp  Poller.cpp  Poller.hpp  Reactor.cpp  Reactor.hpp  Socket.cpp  Socket.hpp  TCP_Multiplexer.hpp  TcpMessageAgent.hpp  UDP_Communicator.hpp
Net/error/: error_mark.hpp  errors.cpp  errors.hpp
Net/error/src/: errors.cpp
Net/file/: FileDescriptor.cpp  FileDescriptor.hpp  FilePool.cpp  FilePool.hpp
Net/file/src/: FileDescriptor.cpp  FilePool.cpp
Net/functions/: Interface.cpp  Interface.hpp  errors.cpp  errors.hpp  poll_interface.hpp
Net/functions/src/: Interface.cpp
Net/monitors/: EPoller.cpp  EPoller.hpp  Event.cpp  Event.hpp  Monitor.cpp  Monitor.hpp  Poller.cpp  Poller.hpp  Selector.cpp  Selector.hpp
Net/monitors/src/: EPoller.cpp  Event.cpp  Monitor.cpp  Poller.cpp  Selector.cpp
Net/poller/: Channel.cpp  Channel.hpp  ChannelsManger.cpp  ChannelsManger.hpp  EpollPoller.cpp  EpollPoller.hpp  PollPoller.cpp  PollPoller.hpp  Poller.cpp  Poller.hpp
Net/reactor/: Reactor.hpp
Net/reactor/src/: Reactor.cpp
Net/socket/: Interface.cpp  Interface.hpp
Net/src/: Acceptor.cpp  BalancedReactor.cpp  Channel.cpp  Controller.cpp  EventLoop.cpp  InetAddress.cpp  NetLink.cpp  Reactor.cpp  Socket.cpp  TCP_Multiplexer.cpp  TcpMassageAgent.cpp  UDP_Communicator.cpp
cmake_config/: BaseConfig.cmake.in  CMake_config.h.in  DistributedConfig.cmake.in  LogSystemConfig.cmake.in  NetConfig.cmake.in  cmake_uninstall.cmake.in  tinyBackendConfig.cmake.in
project_log/: 2024.2.md  2024.3.md  2024.4.md  2024.5.md  2024.6.md  2024.7.md  2024.8.md  log.md
resource/: poem.txt
testing/: AOP_test.hpp  CMakeLists.txt  Distributed_test.hpp  base_test.hpp  logSystem_test.hpp  main.cpp  net_test.hpp  testing.cpp
testing/src/: AOP_test.cpp  Distributed_test.cpp  base_test.cpp  logSystem_test.cpp  net_test.cpp
